# musc-gui

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PHASE1_IMPROVEMENTS.md  PHASE2_IMPROVEMENTS.md  QUICK_START_GUIDE.md  README.md  README_GUI.md  config.example.yaml  config.yaml  demo.py  industrial_gui.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: musc.yaml
examples/: anomaly_detection.ipynb
models/: musc.py
models/backbone/: _backbones.py
models/modules/: _LNAMD.py  _MSM.py
sample_data/: LICENSE.md  README.md
tests/: __init__.py  conftest.py  test_modules.py  test_smoke.py
utils/: __init__.py  hardware_detector.py  model_catalog.py
